Fix bugs, make footer more visible

--- a/src/Containers/Layout/Layout.module.css
+++ b/src/Containers/Layout/Layout.module.css
@@ -5,5 +5,6 @@
 
 .mainContent{
     margin: 2rem 0;
-    min-height: 100vh;
+                            /* navbar   footer   margin*/
+    min-height: calc(100vh - 70.78px - 78.38px - 4rem);
 }
